--- a/requirements.txt
+++ b/requirements.txt
@@ -83,6 +83,7 @@ Pympler==1.0.1
 PyMuPDF==1.23.3
 PyMuPDFb==1.23.3
 PyPika==0.48.9
+pysqlite3-binary==0.5.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
