--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ charset-normalizer==3.2.0
 chroma-hnswlib==0.7.3
 chromadb==0.4.10
 click==8.1.7
+cloudpickle==2.2.1
 coloredlogs==15.0.1
 dataclasses-json==0.5.14
 fastapi==0.99.1
@@ -27,8 +28,11 @@ GitPython==3.1.36
 google-api-core==2.11.1
 google-auth==2.23.0
 google-cloud-aiplatform==1.32.0
+google-cloud-appengine-logging==1.3.1
+google-cloud-audit-log==0.2.5
 google-cloud-bigquery==3.11.4
 google-cloud-core==2.3.3
+google-cloud-logging==3.6.0
 google-cloud-resource-manager==1.10.3
 google-cloud-storage==2.10.0
 google-crc32c==1.5.0
